# beach-please

./: .gitignore  LICENSE  Makefile  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  agent.py  cache.py  catalog.py  config.py  geocoding.py  http.py  main.py  personality.py
backend/app/data/: beaches.json  gsaf_sharks.csv
backend/app/routes/: beaches.py  chat.py
backend/app/tools/: __init__.py  alerts.py  amenities.py  rip_currents.py  sharks.py  tides.py  water_quality.py  waves.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentChat.tsx  ChatPage.tsx
frontend/lib/: api.ts  types.ts
scripts/: dev.sh  install.sh  stop.sh
scripts/linux/: beach-please-backend.service.tmpl  beach-please-frontend.service.tmpl  install-systemd.sh  uninstall-systemd.sh
scripts/macos/: com.beachplease.backend.plist.tmpl  com.beachplease.frontend.plist.tmpl  install-launchd.sh  uninstall-launchd.sh
scripts/windows/: dev.ps1  install-task.ps1  install.ps1  stop.ps1  uninstall-task.ps1
